fix: align next button at right

--- a/dashboard/static/css/styles.css
+++ b/dashboard/static/css/styles.css
@@ -224,6 +224,10 @@ navbar a:last-child {
   margin: 0;
 }
 
+#nextprev > *:last-child {
+  margin-left: auto;
+}
+
 table {
   width: 100%;
   overflow: auto;
